# crastone

./: .gitignore  Dockerfile  README.md  docker-compose.prod.yml  my.md  requirements.txt
.devcontainer/: devcontainer.json
app/: main.py  server.py
app/db/: client.py
app/db/collections/: file.py  files.py
app/queue/: q.py  workers.py
app/utils/: file.py
client/: index.html  package-lock.json  package.json  system-prompt.md
client/src/: App.jsx  index.css
client/src/components/layout/: Footer.jsx  Header.jsx  Layout.jsx
client/src/components/results/: FinalVerdict.jsx  HiddenGems.jsx  PriorityBadge.jsx  RoastSection.jsx  ScoreCard.jsx  ScoreDashboard.jsx  SeverityBadge.jsx  SuggestionCard.jsx  SuggestionsList.jsx  TldrBox.jsx
client/src/components/shared/: FireAnimation.jsx  LoadingSpinner.jsx  StatusBadge.jsx
client/src/components/upload/: DropZone.jsx  UploadProgress.jsx
client/src/pages/: Home.jsx  NotFound.jsx  Processing.jsx  Results.jsx
server/: .dockerignore  .gitignore  Dockerfile  Dockerfile.fly  docker-compose.yml  fly.toml  fly.worker.toml  pyproject.toml  run.sh  worker.sh
server/src/: app.py
server/src/db/: client.py  db.py
server/src/db/collections/: files.py
server/src/utils/: file.py
server/src/workers/: q.py  workers.py
