[project]
name = "system-design"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi[standard]>=0.128.0",
    "ironpdf>=2025.12.1.4",
    "openai>=2.16.0",
    "pymongo[srv]>=4.16.0",
    "redis>=7.1.0",
    "rq>=2.6.1",
]
